# nr_helperlib

./: README.md  pyproject.toml
src/data_import_tools/: import_class.py  import_helpers.py  logic_helpers.py  metadata_generator.py  utility_module.py
src/functions/: dataframe_tools.py  export_helpers.py  import_class.py  import_helpers.py  main_program_functions.py  metadata_generator.py  utility_module.py
src/functions/ts_tools/: README.md  df_generator.py
src/notebooks/: Demo_beregning.ipynb  Demo_import.ipynb
src/ts_tools/: plotters.py  ts_agg_disagg.py
