[tool.poetry]
name = "nr_helperlib"
version = "0.1.0"
description = ""
authors = ["Benedikt Goodman <benedikt.goodman@ssb.no>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dapla-toolbelt = "^1.3.2"
tqdm = "^4.64.1"
seaborn = "^0.12.2"
pandas = "^1.5.3"
numpy = "^1.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
ipykernel = "^6.15.3"

[[tool.poetry.source]]
name = "nexus"
url = "http://pl-nexuspro-p.ssb.no:8081/repository/pypi-proxy/simple"
default = true
secondary = false

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
